--- a/public/css/tooplate-style.css
+++ b/public/css/tooplate-style.css
@@ -427,8 +427,8 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
 
 .tm-img {
 	max-width: 320px;
-  	width: 100%;
-  	height: auto;
+  	width: 200px;
+  	height: 200px;
   	border: none;
   	margin: 0 auto;
 }
@@ -518,9 +518,11 @@ figure.effect-bubba {
     -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
 }*/
-
+figure.effect-bubba img
 figure.effect-bubba img {
-    opacity: 0.7;
+	opacity: 0.7;
+	height: 200px;
+	width: 200px;
 	-webkit-transition: opacity 0.35s;
 	transition: opacity 0.35s;   
 }
@@ -682,6 +684,7 @@ figure.effect-bubba:hover p {
 
 	.tm-img-gallery-info-container {
 		padding: 0 11px 30px;
+		top: 0px;
 		max-width: 700px;
 		margin: 0 auto 0 0;
 	}
@@ -798,7 +801,9 @@ figure.effect-bubba:hover p {
 		margin-bottom: 0;
 	}*/
 
-	.tm-img-gallery-container { max-width: 1360px; }
+	.tm-img-gallery-container { max-width: 1360px;
+		top: 0px;
+	}
 
 	.grid-item { width: 25%; }	
 	.grid-item figure figcaption { padding: 1em; }	
@@ -812,6 +817,7 @@ figure.effect-bubba:hover p {
 	.cd-full-width .container-fluid {
 		padding-left: 20px;
 		padding-right: 20px;
+		top: 0px;
 	}
 	.cd-full-width .container-fluid.tm-page-width {
 		padding-left: 30px;
